change background and fixed hor scrollbars

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 
 #showcase {
   position: relative;
-  background: url('../img/mountains.jpg');
+  background: url('../img/landing.jpg');
   min-height: 1200px;
   background-repeat: no-repeat;
   background-size: cover;
